k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-ticket-prod
  labels:
    name: ms-ticket-prod
